# Open_Mobile_Manipulator

./: README.md
extra_packages/differential-drive/: CMakeLists.txt  README.asciidoc  package.xml
extra_packages/differential-drive/launch/: diff_drive.launch
extra_packages/differential-drive/scripts/: pid_velocity.py  twist_to_motors.py
extra_packages/flexbe/generic_flexbe_states/flexbe_manipulation_states/: CMakeLists.txt  package.xml  setup.py
extra_packages/flexbe/generic_flexbe_states/flexbe_navigation_states/: CMakeLists.txt  package.xml  setup.py
extra_packages/flexbe/generic_flexbe_states/flexbe_navigation_states/tests/: move_base_state_import.test  (+1 more)
extra_packages/flexbe/generic_flexbe_states/flexbe_utility_states/: CMakeLists.txt  package.xml  setup.py
extra_packages/flexbe/lynxbot_behaviors/lynxbot_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
extra_packages/flexbe/lynxbot_behaviors/lynxbot_flexbe_states/: CMakeLists.txt  package.xml  setup.py
extra_packages/kinect_aux/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
extra_packages/kinect_aux/src/: kinect_aux_node.cpp
extra_packages/pcl_obj/: CMakeLists.txt  package.xml
extra_packages/pcl_obj/src/: ball_tracker.cpp  cloud_helpers.cpp  pcl_create.cpp  pcl_main.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp  pcl_sample.cpp
extra_packages/ros-pwm-pca9685/pwm_pca9685/: CMakeLists.txt  package.xml
extra_packages/ros-pwm-pca9685/pwm_pca9685/include/: smbus_functions.h
extra_packages/ros-pwm-pca9685/pwm_pca9685/src/: pca9685_activity.cpp  pca9685_node.cpp
extra_packages/sensor_drivers/ydlidar/: CMakeLists.txt  README.md  ydlidar.rviz
extra_packages/sensor_drivers/ydlidar/launch/: display.launch  gazebo.launch  lidar.launch
extra_packages/sensor_drivers/ydlidar/meshes/: ydlidar.dae
extra_packages/sensor_drivers/ydlidar/sdk/: CMakeLists.txt  README.md
extra_packages/sensor_drivers/ydlidar/src/: ydlidar_node.cpp
extra_packages/sensor_drivers/ydlidar/urdf/: ydlidar.urdf
extra_packages/spin_action_server/: CMakeLists.txt  package.xml
extra_packages/spin_action_server/action/: Spin.action
extra_packages/spin_action_server/src/: spin_server.py
integration/: CMakeLists.txt  package.xml
integration/action/: AttachObject.action  MoveModel.action  MoveToJoints.action  MoveToPose.action
integration/msg/: Action.msg  ActionFeedback.msg  ActionRequest.msg  ActionResult.msg  ActionResultStatusConstants.msg  PropertyValuePair.msg  Resource.msg
integration/srv/: AddBox.srv  GetFrameDistance.srv  SpawnModels.srv
moveit_jog_arm/: CMakeLists.txt  README.md  package.xml
moveit_jog_arm/config/: arm_config.yaml
moveit_jog_arm/launch/: jog_server.launch
moveit_jog_arm/src/: jog_calcs.cpp
moveit_jog_arm/src/teleop_examples/: leapmotion_to_twist.py  xbox_to_twist.cpp
ommp_demo/: CMakeLists.txt  package.xml
ommp_demo/include/: demo_utils.h  ommp_demo_client.h
ommp_demo/launch/: ommp_demo.launch
ommp_demo/src/: ommp_demo.cpp
ommp_handlers/: CMakeLists.txt  package.xml
ommp_handlers/include/ommp_handlers/: NamingConstants.h
ommp_handlers/launch/: main_ommp_handlers .launch  main_ommp_handlers.launch
ommp_handlers/scripts/: move_model_server  spawn_models_server
ommp_handlers/src/: add_planning_box_server_node.cpp  attachObject_handler_server_node.cpp  get_frame_distance_server_node.cpp  moveCartesian_arm_handler_server_node.cpp  moveJoints_handler_server_node.cpp
ommp_packages/ommp_bringup/: CMakeLists.txt  package.xml
ommp_packages/ommp_bringup/config/real_start/: odom_encoder_params.yaml  rf2o_laser_odometry_params.yaml  serial_params.yaml  ydlidar_params.yaml
ommp_packages/ommp_bringup/config/start/: odom_encoder_params.yaml  ydlidar_params.yaml
ommp_packages/ommp_bringup/launch/: main.launch  real_bringup.launch  sim_bringup.launch  sim_helpers.launch
ommp_packages/ommp_bringup/src/: camera_relay.cpp  cmd_vel_mux.cpp  diff_tf.cpp  pub_to_pca9685_driver.cpp  seperate_joint_states.cpp  switch_controllers_client.cpp  talker.cpp
ommp_packages/ommp_bringup/worlds/: empty.world  object_recognition1.world  rtabmap.world  simple.world
ommp_packages/ommp_hardware_interface/ommp_control/: CMakeLists.txt  package.xml
ommp_packages/ommp_hardware_interface/ommp_control/launch/: ommp_hardware.launch  ommp_simulation.launch  ommp_test_trajectory.launch  ommp_visualize.launch
ommp_packages/ommp_hardware_interface/ommp_control/src/: ommp_hw_interface.cpp  ommp_hw_main.cpp
ommp_packages/ommp_moveit_interface/: CMakeLists.txt  package.xml
ommp_packages/ommp_moveit_interface/include/ommp_moveit_interface/: pick_place_server.h
ommp_packages/ommp_moveit_interface/launch/: moveit.launch  pick_place.launch
ommp_packages/ommp_moveit_interface/scripts/: joint_exec.py  out_of_view.py  pick_place_client.py  pos_exec.py  reach_exec.py  set_start_pos.py  traj_exec.py
ommp_packages/ommp_moveit_interface/src/: pick_place_server.cpp
ommp_packages/ommp_moveit_interface/srv/: PickPlace.srv
ommp_packages/ommp_navigation/: CMakeLists.txt  package.xml
ommp_packages/ommp_navigation/launch/: amcl_main.launch  gmapping_main.launch  navigation_main.launch  odom_navigation_main.launch
ommp_packages/ommp_navigation/launch/include/: amcl.launch  exploration.launch  gmapping.launch  move_base.launch
ommp_packages/ommp_navigation/launch/rtabmap/: rtabmap_localization.launch  rtabmap_mapping.launch
ommp_packages/ommp_navigation/maps/: custom_map.pgm  custom_map.yaml  designed_map.pgm  designed_map.yaml  home_map.pgm  home_map.yaml  patra_map.pgm  patra_map.yaml  sim_map.pgm  sim_map.yaml
ommp_packages/ommp_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
ommp_packages/ommp_navigation/params/exploration_params/: costmap_exploration.yaml
ommp_packages/ommp_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
ommp_packages/ommp_navigation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
ommp_packages/ommp_navigation/scripts/: patrol.py
(+405 files in other folders)
