<?xml version="1.0"?>
<package format="2">
  <name>integration</name>
  <version>0.1.0</version>
  <description>The integration package</description>

  <maintainer email="lms@lms.mech.upatras.gr">LMS</maintainer>

  <license>BSD</license>

  <license>Apache 2.0</license>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
