<?xml version="1.0"?>
<package format="2">
  <name>ommp_handlers</name>
  <version>0.0.0</version>
  <description>The ommp_handlers package</description>

  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>integration</depend>

  <export>

  </export>
  
</package>
