<?xml version="1.0"?>
<package>
  <name>ommp_navigation</name>
  <version>0.7.0</version>
  <description>Launch files and code for autonomous navigation of the Open Mobile Manipulator</description>
  <author email="panagelak12@gmail.com">Panagiotis</author>
  <maintainer email="panagelak12@gmail.com">Panagiotis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>

  </export>
</package>
