<package>
  <name>flexbe_navigation_states</name>
  <version>1.0.0</version>
  <description>
     flexbe_navigation_states provides a collection of robot-agnostic
     states related to mobile robot navigation.
  </description>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <maintainer email="philipp.schillinger@de.bosch.com">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
